--- a/index.css
+++ b/index.css
@@ -2,21 +2,29 @@
     --color:rgb(89, 97, 104);
 }
 body{
-    margin: 0px;
-    padding: 0px 30px;
+    width: 8.25in;
+    height: 11.75in;
+    margin: 0 0 0 0 ;
+    padding: 0px 20px;
     box-sizing: border-box;
-    font-family: sans-serif;
+    font-family:Arial, Helvetica, sans-serif;
     color: var(--color);
     display: flex;
     flex-direction: column;
+    /* background-color: aquamarine; */
+}
+span{
+    font-size: 0.85rem;
 }
 a{
     text-decoration: none;
+    font-size: 14px;
     color: var(--color);
 
 }
 p{
     line-height: 1.5rem;
+    font-size: 0.85rem;
 }
 .right-list{
     list-style-type: none;
@@ -24,11 +32,14 @@ p{
 section h2{
     letter-spacing: 0.2rem;
     font-weight: lighter;
-
+    font-size: 1.1rem;
 }
-.contact,.education,.profile{
+h3{
+    font-size: 1.1rem;
+}
+.contact,.education,.profile,.projects,.courses{
     border-bottom: 1px dotted var(--color);
-    margin-bottom: 30px;
+    margin-bottom: 10px;
 }
 header{
     display: flex;
@@ -58,20 +69,21 @@ header h3{
 }
 .left{
     flex: 1;
-    background-color: lightgoldenrodyellow;
-    padding: 0px 30px;
+    background-color: whitesmoke;
+    padding: 0px 10px;
 }
 .right{
-    flex: 2.5;
-    background-color: lightcyan;
-    padding: 0px 30px;
+    flex: 4;
+    /* background-color: lightcyan; */
+    padding: 0px 0.5rem 0px 1rem;
 }
 .contact-info{
-    margin: 25px 0px;
+    margin: 15px 0px;
+    display: flex;
 }
 .contact-info span,.contact-info a{
     margin-left: 10px;
 }
 .list{
-    line-height: 2rem;
+    line-height: 1.4rem;
 }
