--- a/index.css
+++ b/index.css
@@ -11,6 +11,7 @@ body{
     color: var(--color);
     display: flex;
     flex-direction: column;
+    margin: auto;
     /* background-color: aquamarine; */
 }
 span{
