--- a/index.css
+++ b/index.css
@@ -7,7 +7,7 @@ body{
     margin: 0 0 0 0 ;
     padding: 0px 20px;
     box-sizing: border-box;
-    font-family:Arial, Helvetica, sans-serif;
+    font-family: Helvetica, sans-serif;
     color: var(--color);
     display: flex;
     flex-direction: column;
@@ -42,7 +42,7 @@ h3{
 h5,a{
     margin: 0;
 }
-.contact,.education,.profile,.projects,.courses,.experience{
+.contact,.education,.profile,.projects,.experience{
     border-bottom: 1px dotted var(--color);
     margin-bottom: 10px;
 }
@@ -74,7 +74,7 @@ header h3{
 }
 .left{
     flex: 1;
-    background-color: whitesmoke;
+    background-color: rgb(245, 245, 245);
     padding: 0px 10px;
 }
 .right{
