--- a/index.css
+++ b/index.css
@@ -1,6 +1,10 @@
 :root{
     --color:rgb(89, 97, 104);
 }
+/* @font-face{
+    font-family: "custom";
+    src: url(Roboto-Black.ttf)
+} */
 body{
     width: 8.25in;
     height: 11.75in;
@@ -42,7 +46,7 @@ h3{
 h5,a{
     margin: 0;
 }
-.contact,.education,.profile,.projects,.experience{
+.contact,.education,.profile,.projects,.experience, .open-source, .courses{
     border-bottom: 1px dotted var(--color);
     margin-bottom: 10px;
 }
@@ -74,7 +78,7 @@ header h3{
 }
 .left{
     flex: 1;
-    background-color: rgb(245, 245, 245);
+    background-color: rgb(248, 248, 248);
     padding: 0px 10px;
 }
 .right{
@@ -99,4 +103,9 @@ header h3{
 .exp-span{
     display: flex;
     justify-content: space-between;
+}
+.bullets{
+    letter-spacing: normal;
+    font-size: 0.85rem;
+    line-height: 1.5rem;
 }
