--- a/index.css
+++ b/index.css
@@ -1,6 +1,4 @@
-:root{
-    --color:rgb(89, 97, 104);
-}
+
 /* @font-face{
     font-family: "custom";
     src: url(Roboto-Black.ttf)
@@ -8,11 +6,11 @@
 body{
     width: 8.25in;
     height: 11.75in;
-    margin: 0 0 0 0 ;
     padding: 0px 20px;
     box-sizing: border-box;
     font-family: Helvetica, sans-serif;
-    color: var(--color);
+    font-weight: 500;
+    color: rgb(89, 97, 104);
     display: flex;
     flex-direction: column;
     margin: auto;
@@ -24,7 +22,7 @@ span{
 a{
     text-decoration: none;
     font-size: 14px;
-    color: var(--color);
+    color: rgb(89, 97, 104);
 
 }
 p{
@@ -47,7 +45,7 @@ h5,a{
     margin: 0;
 }
 .contact,.education,.profile,.projects,.experience, .open-source, .courses{
-    border-bottom: 1px dotted var(--color);
+    border-bottom: 1px dotted rgb(89, 97, 104);
     margin-bottom: 10px;
 }
 header{
@@ -62,12 +60,12 @@ header h1{
     margin-bottom: 0px;
     font-weight: lighter;
 }
-header h3{
+/* header h3{
     font-weight: lighter;
     letter-spacing: 0.2rem;
-}
+} */
 .section-line{
-    border: 1px solid var(--color);
+    border: 1px solid rgb(89, 97, 104);
 }
 .content{
     display: flex;
@@ -99,6 +97,11 @@ header h3{
 .company{
     display: inline;
     font-weight: lighter;
+}
+.description{
+    display: inline;
+    font-weight: lighter;
+    font-size: medium;
 }
 .exp-span{
     display: flex;
